samples/_failures_safe/1761127482_7d7524_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad1772d6.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_ad1772d6.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
